--- a/src/Components/Player/Player.css
+++ b/src/Components/Player/Player.css
@@ -7,13 +7,9 @@
   flex-grow: 1;
 }
 
-.body {
-  padding: 30px;
-  width: 100%;
-  height: 100vh;
-  overflow-y: overlay;
-  flex: 0.6;
-  color: white;
-  background: linear-gradient(transparent, rgba(0, 0, 0, 1));
-  background-color: rgb(91, 87, 115);
+@media only screen and (max-width: 600px) {
+  .player {
+    display: flex;
+    flex-direction: column;
+  }
 }
